add backlit config opt

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -13,6 +13,8 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 # Automatically turn off underglow when keyboard is not touched for 30s
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
+# Backlit
+CONFIG_ZMK_BACKLIGHT=y
 # ======================= OLED ======================= #
 
 # Enable OLED Display
