--- a/config/sofle.dtsi
+++ b/config/sofle.dtsi
@@ -79,6 +79,7 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(4,5) RC(4,6) RC(3,6) RC(3,7) 
         };
     };
 };
+};
 
 &pro_micro_i2c {
     status = "okay";
@@ -98,4 +99,10 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(4,5) RC(4,6) RC(3,6) RC(3,7) 
         inversion-on;
         prechargep = <0x22>;
     };
+};
+
+&pwm0 {
+    status = "okay";
+    ch0-pin = <6>;
+    ch0-inverted;
 };
