--- a/config/sofle.dtsi
+++ b/config/sofle.dtsi
@@ -102,6 +102,14 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(4,5) RC(4,6) RC(3,6) RC(3,7) 
 
 &pwm0 {
     status = "okay";
-    ch0-pin = <6>;
-    ch0-inverted;
+    pinctrl-0 = <&pwm0_default>;
+    pinctrl-names = "default";
+};
+
+&pinctrl {
+    pwm0_default: pwm0_default {
+        group1 {
+            psels = <NRF_PSEL(PWM_OUT0, 0, 6)>;
+        };
+    };
 };
