--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -15,6 +15,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
 # Backlit
 CONFIG_ZMK_BACKLIGHT=y
+CONFIG_PWM=y
 # ======================= OLED ======================= #
 
 # Enable OLED Display
