--- a/config/sofle.dtsi
+++ b/config/sofle.dtsi
@@ -73,12 +73,17 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(4,5) RC(4,6) RC(3,6) RC(3,7) 
         triggers-per-rotation = <20>;
     };
 
-    backlight: pwmleds {
-        compatible = "zmk,backlight-pwm";
-        pwm_led_0 {
+    pwmleds {
+        compatible = "pwm-leds";
+        pwm_led_0: pwm_led_0 {
             pwms = <&pwm0 0 PWM_MSEC(1) PWM_POLARITY_NORMAL>;
-            label = "Backlight";
+            label = "Backlight LED";
         };
+    };
+
+    backlight: backlight {
+        compatible = "zmk,backlight-pwm";
+        pwm-leds = <&pwm_led_0>;
     };
 };
 
