--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -14,8 +14,8 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
 # Backlit
-CONFIG_ZMK_BACKLIGHT=y
-CONFIG_PWM=y
+# CONFIG_ZMK_BACKLIGHT=y
+# CONFIG_PWM=y
 # ======================= OLED ======================= #
 
 # Enable OLED Display
