--- a/config/sofle.dtsi
+++ b/config/sofle.dtsi
@@ -16,7 +16,7 @@
     chosen {
         zephyr,display = &oled;
         zmk,kscan = &kscan0;
-	zmk,backlight = &backlight;
+	// zmk,backlight = &backlight;
     };
 
     default_transform: keymap_transform_0 {
