--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -30,18 +30,15 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
 # ======================= MISC ======================= #
 
-# Increase the power dedicated to bluetooth transmission to fix bluetooth connectivity issues
-# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_TRANSPORT_SERIAL=y
 
-# Enable experimental bluetooth connection features
-# CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_SPLIT_BLE=n
+CONFIG_BT=n
+CONFIG_BT_HCI=n
+CONFIG_ZMK_BLE=n
 
-# Set idle timeout to 1 minute
-# CONFIG_ZMK_IDLE_TIMEOUT=600000
-
-# Enable deep sleep after 1 hour of inactivity
-# CONFIG_ZMK_SLEEP=y
-# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+CONFIG_USB_DEVICE_STACK=y
 
 # Add support for encoders
 CONFIG_EC11=y
