--- a/boards/shields/sofle_left.conf
+++ b/boards/shields/sofle_left.conf
@@ -1,6 +1,5 @@
-
-# This is a master
+# Make the LEFT half the central (master) side of the split.
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
-# Enable USB HID
+# Enable USB HID on the central side so it works standalone over USB.
 CONFIG_ZMK_USB=y
