--- a/boards/shields/sofle_right.conf
+++ b/boards/shields/sofle_right.conf
@@ -1,5 +1,5 @@
-# This is a slave
+# Make the RIGHT half the peripheral (slave) side of the split.
 CONFIG_ZMK_SPLIT_ROLE_PERIPHERAL=y
 
-# Disable USB HID for slave
+# Disable USB HID on the peripheral side (it reports keys via the split link).
 CONFIG_ZMK_USB=n
