--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -1,45 +1,39 @@
-# AUTHOR: https://github.com/trevorgjohnson/zmk-config
-
-# ======================= RGB ======================= #
-
-# Enable RGB underglow
+# ========= RGB =========
+# Enable WS2812/underglow support in ZMK.
 CONFIG_ZMK_RGB_UNDERGLOW=y
-
-# Disable external power toggling by the underglow.
-# By default toggling the underglow on and off also toggles external power
-# on and off. This also causes the display to turn off.
+# Prevent underglow toggling from switching external power rails (keeps screen on).
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
-
-# Automatically turn off underglow when keyboard is not touched for 30s
+# Automatically turn off underglow when idle to save power.
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
-# Backlit
-# CONFIG_ZMK_BACKLIGHT=y
-# CONFIG_PWM=y
-# ======================= OLED ======================= #
-
-# Enable OLED Display
+# ========= OLED =========
+# Enable display subsystem in ZMK (SSD1306/OLED etc.).
 CONFIG_ZMK_DISPLAY=y
-
-# Show WPM on OLED
+# Show WPM widget on the OLED.
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
+# NOTE: Battery widgets are disabled below to avoid Kconfig warnings unless
+#       ZMK battery reporting is explicitly configured in DT/ADC.
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=n
 
-# Show battery level in percentage on OLED
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-
-# ======================= MISC ======================= #
-
-CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_TRANSPORT_SERIAL=y
-
-CONFIG_ZMK_SPLIT_BLE=n
-CONFIG_BT=n
-CONFIG_BT_HCI=n
-CONFIG_ZMK_BLE=n
-
-CONFIG_USB_DEVICE_STACK=y
-
-# Add support for encoders
+# ========= Encoders =========
+# Enable EC11 rotary encoders support.
 CONFIG_EC11=y
+# Use the global thread trigger for EC11 to improve responsiveness.
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# ========= Split setup (Wired; UART) =========
+# Enable split keyboard support in ZMK.
+CONFIG_ZMK_SPLIT=y
+# Disable BLE split transport (we're using wired UART only).
+CONFIG_ZMK_SPLIT_BLE=n
+
+# ========= Persistent settings (required by ZMK) =========
+# Enable Zephyr settings subsystem.
+CONFIG_SETTINGS=y
+# Use NVS (flash) backend for persistent settings.
+CONFIG_SETTINGS_NVS=y
+
+# ========= USB stack =========
+# Provide USB device stack (HID will be enabled only on the central half).
+CONFIG_USB_DEVICE_STACK=y
