fix right half config

--- a/boards/shields/sofle_right.conf
+++ b/boards/shields/sofle_right.conf
@@ -3,3 +3,10 @@ CONFIG_ZMK_SPLIT_ROLE_PERIPHERAL=y
 
 # Disable USB HID on the peripheral side (it reports keys via the split link).
 CONFIG_ZMK_USB=n
+
+# Disable display and all widgets on the peripheral half to avoid BLE/endpoint deps
+CONFIG_ZMK_DISPLAY=n
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=n
