disable CONFIG_ZMK_WIDGET_OUTPUT_STATUS config opt

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -16,6 +16,9 @@ CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=n
 
+# Disable the Output Status widget to avoid BLE/endpoint symbols on the peripheral half
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+
 # ========= Encoders =========
 # Enable EC11 rotary encoders support.
 CONFIG_EC11=y
